k8s/score-computation-cronjob.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: subgraph-dips-indexer-selection-iisa-daily-cronjob-samuel
  labels:
    app: iisa-score-computation
    owner: samuel
