k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iisa
  namespace: subgraph-dips-indexer-selection-iisa-daily-cronjob-samuel
  labels:
    app: iisa
spec:
  type: ClusterIP
  selector:
    app: iisa
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
